--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=gb2312">
 <title>HTML</title>
@@ -7,7 +7,7 @@ body
 {
 background:"white";
 font-family:"宋体";
-font-size:4px;
+font-size:20px;
 }
 </style>
 </head>
