--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="images/udacity-logo.png" alt="Udacity Logo" id="logo">
             </a>
             <div id="title">
-                <h1>JANE DOETTE</h1>
+                <h1>NEO W</h1>
                 <p>FRONT-END NINJA</p>
             </div>
         </header>
